Wed Jan 25 21:12:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Exclude tests that require Built-In Topics from running
          when the test configuration includes NO_BUILT_IN_TOPICS.

        * tests/DCPS/ConfigFile/ConfigFile.cpp:
        * tests/DCPS/ConfigFile/run_test.pl:
        * tests/DCPS/ConfigFile/test1_nobits.ini:

          Allow test to run when Built-in Topics are disabled
          at compile time.  This will skip testing RTPS Discovery.

Wed Jan 25 21:06:45 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Read subscription bit, test changing of user data for reader.

Wed Jan 25 20:05:51 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:

          Fix sequence repair bit unnecessarily being set.
          Fix expected sequence not being updated when content subscription
            profile not built.

Wed Jan 25 19:22:48 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/CorbaSeq/Writer.cpp:

          Initialize all data in sequences.  This is needed in
          the wchar case because some hosts have > 16 bits in wchar_t
          and the serializer can't handle values outside of the UTF-16 range.

Wed Jan 25 17:25:45 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Add get_discovered_participants, get_discovered_participant_data,
          bit_key_to_repo_id and get_handle testing.
          Test change of participant, publication and topic qos.

Wed Jan 25 17:01:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          RtpsDiscovery should only have one entry, one invocation
          of run_test.pl is enough to run all scenarios.

        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
